# blackjack-sim

./: README.md  basic_play.py  basic_sim.py  basic_v_standard_sim.py  i18_benchmark.py  manual_game.py  pyproject.toml  single_game.py
blackjack_sim/: __init__.py  base.py  game.py  players.py  src.py  strategy.py  utils.py
blackjack_sim/assets/: i18_strategy.csv  standard_strategy.csv
