[tool.poetry]
name = "blackjack-sim"
version = "0.1.0"
description = ""
authors = ["Jimmy Lin <hsiulin01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
